[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Note: ROS2 colcon uses setup.py, but we keep pyproject.toml for UV and dev tools
# The [project] section is commented out to avoid conflicts with setup.py during colcon build

# [project]
# name = "scarface"
# version = "0.1.0"
# description = "ROS2 Jazzy adapter for the Scarface robot fish"
# readme = "README.md"
# requires-python = ">=3.10"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
